# SpireMS

./: .gitignore  README.en.md  README.md  setup.py
json_schema/vis_schema/: ArrowPrimitive.json  CameraCalibration.json  CircleAnnotation.json  Color.json  CompressedImage.json  CompressedVideo.json  CubePrimitive.json  CylinderPrimitive.json  FrameTransform.json  FrameTransforms.json  GeoJSON.json  Grid.json  ImageAnnotations.json  KeyValuePair.json  LaserScan.json  LinePrimitive.json  LocationFix.json  Log.json  ModelPrimitive.json  PackedElementField.json  Point2.json  Point3.json  PointCloud.json  PointsAnnotation.json  Pose.json  PoseInFrame.json  PosesInFrame.json  Quaternion.json  RawImage.json  SceneEntity.json  SceneEntityDeletion.json  SceneUpdate.json  SpherePrimitive.json  TextAnnotation.json  TextPrimitive.json  TriangleListPrimitive.json  Vector2.json  Vector3.json
spirems/: __init__.py  core.py  error_code.py  log.py  msg_helper.py  parameter.py  publisher.py  server.py  sms.py  smsparam.py  subscriber.py
spirems/demo/: a2rl_path_sender.py  publisher_demo.py  subscriber_demo.py
spirems/image_io/: a2rl_gs.py  a2rl_live.py  adaptor.py  recv_testcase.py  visual_helper.py
spirems/json_msgs/geometry_msgs/: FrameTransform.json  FrameTransforms.json  Point2.json  Point3.json  Pose.json  PoseInFrame.json  PosesInFrame.json  Quaternion.json  Vector2.json  Vector3.json
spirems/json_msgs/sensor_msgs/: CameraCalibration.json  CompressedImage.json  CompressedVideo.json  LaserScan.json  PointCloud.json  RawImage.json
spirems/json_msgs/spirecv_msgs/: 2DTargets.json  EvaluationResult.json  Task.json
spirems/json_msgs/std_msgs/: BooleanMultiArray.json  Log.json
spirems/json_schemas/geometry_msgs/: FrameTransform.json  FrameTransforms.json  Point2.json  Point3.json  Pose.json  PoseInFrame.json  PosesInFrame.json  Quaternion.json  Vector2.json  Vector3.json
spirems/json_schemas/sensor_msgs/: CameraCalibration.json  CompressedImage.json  CompressedVideo.json  LaserScan.json  PointCloud.json  RawImage.json
spirems/json_schemas/std_msgs/: Log.json
spirems/logs/: README.md
spirems/msgs/_sys_msgs/: HeartBeat.json  ParamReader.json  ParamWriter.json  Parameter.json  Publisher.json  Result.json  SmsTopicList.json  Subscriber.json  Suspend.json  TopicDown.json  TopicUpload.json  Unsuspend.json
spirems/msgs/_visual_msgs/: A2RLMonit.json
spirems/msgs/sensor_msgs/: Image.json
spirems/msgs/std_msgs/: Boolean.json  Null.json  Number.json  NumberMultiArray.json  String.json  StringMultiArray.json
spirems/msgs/wedet_msgs/: BaseLog.json  CVJob.json  DetResult.json  EvalResult.json  Params.json
spirems/res/: optm_path.json  yas_full_left.csv  yas_full_right.csv
spirems/sys_monit/: a2rl_sys_monit.py  psutil_pub.py
spirems_cpp/: CMakeLists.txt
spirems_cpp/demo/: publisher_demo.cpp  subscriber_demo.cpp
spirems_cpp/include/: sms_core.h  sms_helper.h  sms_publisher.h  sms_subscriber.h
spirems_cpp/src/: sms_helper.cpp  sms_publisher.cpp  sms_subscriber.cpp
test/: global_param_test.py  msg_interval_test.py  msg_interval_test_multi.py  msg_interval_test_one.py  spireview_pipeline.py  spireview_yolov8.py  test_receiver.py  test_sender1.py  test_sender2.py
